--- a/src/AzerothReforged.Launcher/App.xaml
+++ b/src/AzerothReforged.Launcher/App.xaml
@@ -1,3 +1,6 @@
+<!-- ============================================
+File: src/AzerothReforged.Launcher/App.xaml
+============================================= -->
 <Application x:Class="AzerothReforged.Launcher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
