--- a/src/AzerothReforged.Launcher/MainWindow.xaml
+++ b/src/AzerothReforged.Launcher/MainWindow.xaml
@@ -1,16 +1,17 @@
+<!-- ============================================
+File: src/AzerothReforged.Launcher/MainWindow.xaml
+============================================= -->
 <Window x:Class="AzerothReforged.Launcher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Azeroth Reforged"
-        Width="980" Height="620"
+        Title="Azeroth Reforged" Width="980" Height="620"
         WindowStartupLocation="CenterScreen">
 
-  <!-- Styles & brushes -->
+  <!-- styles -->
   <Window.Resources>
     <SolidColorBrush x:Key="PanelBg" Color="#66000000"/>
     <SolidColorBrush x:Key="PanelBorder" Color="#5533A0E0"/>
 
-    <!-- PLAY button style -->
     <Style x:Key="PlayButtonStyle" TargetType="Button">
       <Setter Property="Foreground" Value="White"/>
       <Setter Property="FontWeight" Value="Bold"/>
@@ -49,8 +50,7 @@
       </Style.Triggers>
     </Style>
 
-    <!-- Secondary buttons -->
-    <Style x:Key="SecondaryButton" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+    <Style x:Key="SecondaryButton" TargetType="Button">
       <Setter Property="Foreground" Value="White"/>
       <Setter Property="Background" Value="#2B000000"/>
       <Setter Property="BorderBrush" Value="#55FFFFFF"/>
@@ -59,22 +59,20 @@
     </Style>
   </Window.Resources>
 
-  <!-- Background image (your PNG) -->
+  <!-- background image via pack URI -->
   <Window.Background>
-    <ImageBrush ImageSource="Assets/bg_main.png"
-                Stretch="UniformToFill"
-                AlignmentX="Center"
-                AlignmentY="Center"/>
+    <ImageBrush ImageSource="pack://application:,,,/Assets/bg_main.png"
+                Stretch="UniformToFill" AlignmentX="Center" AlignmentY="Center"/>
   </Window.Background>
 
-  <!-- Layout -->
+  <!-- layout -->
   <Grid Margin="12">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="2*"/>
       <ColumnDefinition Width="*"/>
     </Grid.ColumnDefinitions>
 
-    <!-- Left: status + log -->
+    <!-- left: status/log -->
     <Border Grid.Column="0" Background="{StaticResource PanelBg}"
             BorderBrush="{StaticResource PanelBorder}" BorderThickness="1"
             Padding="12" Margin="0,0,12,0">
@@ -85,21 +83,20 @@
           <ProgressBar x:Name="MainProgress" Height="16" Minimum="0" Maximum="100"/>
         </StackPanel>
 
-        <ListBox x:Name="LogList" Margin="0,8,0,8"
-                 Foreground="#FFEEEEEE" Background="#22000000"/>
+        <ListBox x:Name="LogList" Margin="0,8,0,8" Foreground="#FFEEEEEE" Background="#22000000"/>
 
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,8,0,0">
           <Button x:Name="BtnUpdate" Content="Update / Repair" Width="150" Margin="0,0,8,0"
-                  Click="BtnUpdate_Click" Style="{StaticResource SecondaryButton}"/>
+                  Style="{StaticResource SecondaryButton}" Click="BtnUpdate_Click"/>
           <Button x:Name="BtnConfig" Content="Options" Width="100" Margin="0,0,8,0"
-                  Click="BtnConfig_Click" Style="{StaticResource SecondaryButton}"/>
+                  Style="{StaticResource SecondaryButton}" Click="BtnConfig_Click"/>
           <Button x:Name="BtnPlay" Content="PLAY" Width="140"
-                  Click="BtnPlay_Click" Style="{StaticResource PlayButtonStyle}"/>
+                  Style="{StaticResource PlayButtonStyle}" Click="BtnPlay_Click"/>
         </StackPanel>
       </DockPanel>
     </Border>
 
-    <!-- Right: news -->
+    <!-- right: news -->
     <Border Grid.Column="1" Background="{StaticResource PanelBg}"
             BorderBrush="{StaticResource PanelBorder}" BorderThickness="1"
             Padding="12">
@@ -109,9 +106,8 @@
           <StackPanel x:Name="NewsPanel"/>
         </ScrollViewer>
         <Button DockPanel.Dock="Bottom" Content="Refresh" Width="100" HorizontalAlignment="Right" Margin="0,8,0,0"
-                Click="RefreshNews_Click" Style="{StaticResource SecondaryButton}"/>
+                Style="{StaticResource SecondaryButton}" Click="RefreshNews_Click"/>
       </DockPanel>
     </Border>
-
   </Grid>
 </Window>
